# battery-optimiser

./: .gitignore  Makefile  README.md
backend/: .gcloudignore  Dockerfile  MODEL.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  data.py  main.py  optimise.py  schemas.py
backend/deploy/: cloudrun.sh
backend/tests/: test_api.py  test_optimise.py
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Dashboard.tsx
frontend/src/lib/: api.ts  batteries.ts
